# Parakernel

./: .gitignore  CMakeLists.txt  Dockerfile  Image File  README.md  cmake_install.cmake  config.py  kernel.json  paraview_kernel.py  requirements.txt  start_jupyter.sh
MPICH/: ComposeService.yaml  network.yaml
MPICH/Jupyter/: Dockerfile  Test.ipynb  paraview_kernel.py  start_jupyter.sh
MPICH/MPICH/: Dockerfile
MPICH/NOVNC Layer/: Dockerfile  entrypoint.sh  supervisord.conf
MPICH/NOVNC Layer/conf.d/: fluxbox.conf
MPICH/NOVNC Layer/novnc/: passwd
MPICH/pvserver/: Dockerfile
PK/: Makefile  config.py  configure_files.cmake  kernel.json.in
cluster/pvs-cluster/: Cargo.toml
cluster/pvs-cluster/src/: cli.rs  connection.rs  main.rs  network.rs  service.rs  utils.rs
docker/: Dockerfile
docker/conf.d/: jupyter.conf  x11vnc.conf
docker/fluxbox/: init  startup.sh
